# msi-klc

./: Cargo.toml  README.md  shell.nix
animations/: README.md  breathe.txt  generate.sh  generator.py  generator.sh  rgb-wave.txt  wave.txt
src/: lib.rs  main.rs  parser.rs
