[package]
name = "msi-klc"
version = "1.0.1"
edition = "2021"
authors = ["ErrorNoInternet <error.nointernet@gmail.com>"]
license = "MIT"
description = "MSI Keyboard Light Controller"
homepage = "https://github.com/ErrorNoInternet/msi-klc"
repository = "https://github.com/ErrorNoInternet/msi-klc"
readme = "README.md"
keywords = [
    "msi",
    "laptop",
    "rgb",
    "backlight",
    "steelseries",
    "keyboard",
]
exclude = ["animations"]

[dependencies]
clap = "3.2.22"
hidapi = "1.4.2"
